Minor changes in the default values, allowed the soundBarHighlight to become the default for the soundBarBorder (even if no value is passed ^-^)  also added a locking mechanism to prevent users from making more than one playlist (that way they can't break the [admittedly fragile] code)

--- a/main.css
+++ b/main.css
@@ -1,12 +1,8 @@
-.song{
-    padding: 5px;
-    margin: 10px auto;
-    border: 1px solid #aaa;
 /*
-    background: #060;
-    color: white;
-*/
+.song{
+    padding: 5px; margin: 10px auto;border: 1px solid #aaa;
 }
+*/
 
 .logo{
     float: left;
